@@ -1,13 +1,20 @@
 package de.flashheart.rlg.commander.games;
 
+import com.github.ankzz.dynamicfsm.action.FSMAction;
 import com.github.ankzz.dynamicfsm.fsm.FSM;
+import com.google.common.collect.ArrayTable;
 import com.google.common.collect.HashBasedTable;
+import com.google.common.collect.Lists;
 import com.google.common.collect.Table;
 import de.flashheart.rlg.commander.controller.MQTT;
 import de.flashheart.rlg.commander.controller.MQTTOutbound;
 import de.flashheart.rlg.commander.games.jobs.BroadcastScoreJob;
+import de.flashheart.rlg.commander.misc.JavaTimeConverter;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.collections4.map.MultiKeyMap;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.mutable.MutableLong;
+import org.checkerframework.checker.units.qual.A;
 import org.json.JSONException;
 import org.json.JSONObject;
 import org.quartz.JobKey;
@@ -30,12 +37,13 @@ import static org.quartz.SimpleScheduleBuilder.simpleSchedule;
 @Log4j2
 public class CenterFlags extends Timed implements HasScoreBroadcast {
 
+    private static final boolean DEVELOP_MODE = true;
     private final BigDecimal SCORE_CALCULATION_EVERY_N_SECONDS = BigDecimal.valueOf(0.5d);
     private final long BROADCAST_SCORE_EVERY_N_TICKET_CALCULATION_CYCLES = 10;
     private long broadcast_cycle_counter;
-    private final List<Object> capture_points;
+    private final List<String> capture_points;
     private final Map<String, FSM> cpFSMs;
-    private final HashMap<String, Long> scores;
+    private final Table<String, String, Long> scores;
     private final JobKey broadcastScoreJobkey;
     private long last_job_broadcast;
 
@@ -52,13 +60,13 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
         setGameDescription(game_parameters.getString("comment"), "",
                 String.format("Gametime: %s", ldtTime.format(DateTimeFormatter.ofPattern("mm:ss"))), "");
 
-        capture_points = game_parameters.getJSONObject("agents").getJSONArray("capture_points").toList();
+        capture_points = game_parameters.getJSONObject("agents").getJSONArray("capture_points").toList().stream().map(o -> o.toString()).sorted().collect(Collectors.toList());
 
-        scores = new HashMap<>();
+        scores = HashBasedTable.create();
         cpFSMs = new HashMap<>();
         roles.get("capture_points").forEach(agent -> cpFSMs.put(agent, create_CP_FSM(agent)));
-        Table<String, String, Integer> universityCourseSeatTable
-                = HashBasedTable.create();
+
+        reset_score_table();
 
         broadcastScoreJobkey = new JobKey("broadcast_score", uuid.toString());
         jobs_to_suspend_during_pause.add(broadcastScoreJobkey);
@@ -66,6 +74,26 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
         add_spawn_for("red_spawn", MQTT.RED, "RedFor");
         add_spawn_for("blue_spawn", MQTT.BLUE, "BlueFor");
 
+    }
+
+    private void reset_score_table() {
+        Lists.newArrayList("blue", "red").forEach(color -> {
+            capture_points.forEach(agent -> {
+                scores.put(agent, color, 0l);
+            });
+            scores.put("all", color, 0l);
+        });
+    }
+
+    private JSONObject scores_to_vars() {
+        JSONObject vars = new JSONObject();
+        Lists.newArrayList("blue", "red").forEach(color -> {
+            capture_points.forEach(agent -> {
+                vars.put(get_agent_key(agent, color), JavaTimeConverter.format(scores.get(agent, color)));
+            });
+            vars.put("score_" + color, JavaTimeConverter.format(scores.get("all", color)));
+        });
+        return vars;
     }
 
     private String get_agent_key(String agent, String state) {
@@ -84,6 +112,13 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
                 else cp_to_red(agent);
                 process_message(_msg_IN_GAME_EVENT_OCCURRED);
             });
+            fsm.setAction("to_neutral", new FSMAction() {   // admin function
+                @Override
+                public boolean action(String curState, String message, String nextState, Object args) {
+                    revert_score_for(agent);
+                    return true;
+                }
+            });
             return fsm;
         } catch (ParserConfigurationException | SAXException | IOException ex) {
             log.error(ex);
@@ -94,7 +129,7 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
     private void cp_to_neutral(String agent) {
         mqttOutbound.send("paged",
                 MQTT.page("page0",
-                        "I am ${agentname}", "Blue: ${score_blue}", "Red: ${score_red}", "I am a Flag"),
+                        "I am ${agentname}...", "...and Your Flag", "Blue: ${" + get_agent_key(agent, "blue") + "}", "Red: ${" + get_agent_key(agent, "red") + "}"),
                 agent);
         mqttOutbound.send("visual", MQTT.toJSON(MQTT.ALL, "off", MQTT.WHITE, "normal"), agent);
     }
@@ -103,12 +138,14 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
         mqttOutbound.send("visual", MQTT.toJSON(MQTT.ALL, "off", MQTT.BLUE, "normal"), agent);
         mqttOutbound.send("acoustic", MQTT.toJSON(MQTT.BUZZER, "double_buzz"), agent);
         addEvent(new JSONObject().put("item", "capture_point").put("agent", agent).put("state", "blue"));
+        broadcast_score();
     }
 
     private void cp_to_red(String agent) {
         mqttOutbound.send("visual", MQTT.toJSON(MQTT.ALL, "off", MQTT.RED, "normal"), agent);
         mqttOutbound.send("acoustic", MQTT.toJSON(MQTT.BUZZER, "double_buzz"), agent);
         addEvent(new JSONObject().put("item", "capture_point").put("agent", agent).put("state", "red"));
+        broadcast_score();
     }
 
     @Override
@@ -120,7 +157,6 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
         if (message.equals(_msg_RUN)) { // need to react on the message here rather than the state, because it would mess up the game after a potential "continue" which also ends in the state "RUNNING"
             cpFSMs.values().forEach(fsm -> fsm.ProcessFSM(_msg_RUN));
 
-            // setup and start bleeding job
             long repeat_every_ms = SCORE_CALCULATION_EVERY_N_SECONDS.multiply(BigDecimal.valueOf(1000l)).longValue();
             create_job(broadcastScoreJobkey, simpleSchedule().withIntervalInMilliseconds(repeat_every_ms).repeatForever(), BroadcastScoreJob.class);
             broadcast_cycle_counter = 0;
@@ -135,20 +171,14 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
             broadcast_cycle_counter = 0l;
             last_job_broadcast = 0l;
             cpFSMs.values().forEach(fsm -> fsm.ProcessFSM(_msg_RESET));
-            // reset scores
-            scores.clear();
-            scores.put("blue", 0l);
-            scores.put("red", 0l);
-            cpFSMs.keySet().forEach(agent -> {
-                scores.put(get_agent_key(agent, "red"), 0l);
-                scores.put(get_agent_key(agent, "blue"), 0l);
-                mqttOutbound.send("vars", new JSONObject().put("score_blue", "00:00").put("score_red", "00:00"), agents.keySet());
-            });
+            reset_score_table();
+            broadcast_score();
         }
 
         if (state.equals(_state_EPILOG)) {
             deleteJob(broadcastScoreJobkey); // this cycle has no use anymore
             cpFSMs.values().forEach(fsm -> fsm.ProcessFSM("game_over"));
+            broadcast_score(); // one last time
         }
     }
 
@@ -157,27 +187,75 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
         final long now = ZonedDateTime.now().toInstant().toEpochMilli();
         final long time_to_add = now - last_job_broadcast;
         last_job_broadcast = now;
-        cpFSMs.entrySet().forEach(stringFSMEntry -> add_score_for(stringFSMEntry.getKey(), stringFSMEntry.getValue().getCurrentState(), time_to_add));
+
+        if (game_fsm.getCurrentState().equals(_state_RUNNING))
+            cpFSMs.entrySet().forEach(stringFSMEntry -> add_score_for(stringFSMEntry.getKey(), stringFSMEntry.getValue().getCurrentState(), time_to_add));
 
         broadcast_cycle_counter++;
-        if (broadcast_cycle_counter % BROADCAST_SCORE_EVERY_N_TICKET_CALCULATION_CYCLES == 0) {
+        if (!game_fsm.getCurrentState().equals(_state_RUNNING) || broadcast_cycle_counter % BROADCAST_SCORE_EVERY_N_TICKET_CALCULATION_CYCLES == 0) {
+            JSONObject vars = MQTT.merge(scores_to_vars(), get_agents_states_for_lcd());
             mqttOutbound.send("timers", MQTT.toJSON("remaining", Long.toString(getRemaining())), roles.get("spawns"));
-
-            JSONObject vars = new JSONObject()
-                    .put("score_blue", ZonedDateTime.ofInstant(Instant.ofEpochMilli(scores.get("blue")), ZoneId.systemDefault()).format(DateTimeFormatter.ofPattern("mm:ss")))
-                    .put("score_red", ZonedDateTime.ofInstant(Instant.ofEpochMilli(scores.get("red")), ZoneId.systemDefault()).format(DateTimeFormatter.ofPattern("mm:ss")));
-            for (String key : scores.keySet()) {
-                vars = MQTT.merge(vars, MQTT.toJSON(key, ZonedDateTime.ofInstant(Instant.ofEpochMilli(scores.get(key)), ZoneId.systemDefault()).format(DateTimeFormatter.ofPattern("mm:ss"))));
-            }
-            mqttOutbound.send("vars", vars, agents.keySet());
+            mqttOutbound.send("vars", vars, DEVELOP_MODE ? agents.keySet() : roles.get("spawns"));
+            log.debug(vars.toString(4));
         }
+
+    }
+
+    /**
+     * creates line variables to show the state of the agents involved.
+     *
+     * @return
+     */
+    private JSONObject get_agents_states_for_lcd() {
+        ArrayList<String> s = new ArrayList<>();
+        capture_points.forEach(agent -> {
+            String color = cpFSMs.get(agent).getCurrentState().toLowerCase();
+            if (!color.matches("red|blue")) color = "--";
+            s.add(String.format("%s:%s", agent, StringUtils.left(color, 4)));
+        });
+        JSONObject lines = MQTT.toJSON("line1", "", "line2", "", "line3", "", "line4", "");
+        int index = 0;
+        for (List<String> list : Lists.partition(s, 2)) {
+            index++;
+            lines.put("line" + index, list.get(0) + (list.size() > 1 ? "," + list.get(1) : ""));
+        }
+        return lines;
     }
 
     private void add_score_for(String agent, String current_state, long time_to_add) {
-        String state = current_state.toLowerCase();
-        if (!state.equals("blue") && !state.equals("red")) return;
-        scores.put(state, scores.get(state) + time_to_add);
-        scores.put(get_agent_key(agent, current_state), scores.get(get_agent_key(agent, current_state)) + time_to_add);
+        String color = current_state.toLowerCase();
+        if (!color.equals("blue") && !color.equals("red")) return;
+        // replace cell values
+        scores.put(agent, color, scores.get(agent, color) + time_to_add); // replace cell value
+        scores.put("all", color, scores.get("all", color) + time_to_add);
+    }
+
+    /**
+     * if we have to reset a flag back to neutral (white) then all scores added by this agent will be reverted to zero.
+     * And his scores will be subtracted from the overall sums.
+     *
+     * @param agent
+     */
+    private void revert_score_for(String agent) {
+        //MutableLong scores_for_this_agent = new MutableLong(0l);
+        //scores.row(agent).entrySet().forEach(stringLongEntry -> scores_for_this_agent.add(stringLongEntry.getValue()));
+        Lists.newArrayList("blue", "red").forEach(color -> {
+            long score_for_this_agent_and_color = scores.get(agent, color);
+            long sum_score_for_this_color = scores.get("all", color);
+            scores.put(agent, color, 0l);
+            scores.put("all", color, sum_score_for_this_color - score_for_this_agent_and_color);
+        });
+    }
+
+    @Override
+    public void admin_message(JSONObject params) throws IllegalStateException {
+        String agent = params.getString("agent");
+        String operation = params.getString("operation");
+        if (!cpFSMs.containsKey(agent)) return;
+        if (!cpFSMs.get(agent).getCurrentState().toLowerCase().matches("blue|red")) return;
+        if (operation.equalsIgnoreCase("to_neutral")) {
+            cpFSMs.get(agent).ProcessFSM(operation);
+        }
     }
 
     @Override
@@ -195,25 +273,24 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
     @Override
     protected JSONObject getSpawnPages() {
         if (game_fsm.getCurrentState().equals(_state_EPILOG)) {
-            return MQTT.page("page0", "Game Over", "", "", "");
-        }
-
-        if (game_fsm.getCurrentState().equals(_state_RUNNING)) {
-            // one page per Agent
-            JSONObject pages = MQTT.page("page0",
-                    "Restzeit:  ${remaining}",
-                    "---------",
+            return MQTT.page("page0", "Game Over",
+                    "",
                     "Blau: ${score_blue}",
                     "Rot: ${score_red}");
-            //todo: das hier klappt nicht. bleibt immer die letzte seite übrig.
-            for (String agent : cpFSMs.keySet().stream().sorted().collect(Collectors.toList())) {
-                pages = MQTT.merge(MQTT.page("page_" + agent,
-                        "  " + agent + "  ",
-                        "Farbe: ${" + agent + "_state}",
-                        "Blau: ${score_blue_" + agent + "}",
-                        "Rot: ${score_red_" + agent + "}"));
-            }
-            return pages;
+        }
+
+        if (game_fsm.getCurrentState().matches(_state_PAUSING + "|" + _state_RUNNING)) {
+            return MQTT.merge(MQTT.page("page0",
+                            "Restzeit:  ${remaining}",
+                            "",
+                            "Blau: ${score_blue}",
+                            "Rot: ${score_red}"),
+                    MQTT.page("page1",
+                            "Restzeit:  ${remaining}",
+                            "${line1}",
+                            "${line2}",
+                            "${line3}")
+            );
         }
         return MQTT.page("page0", game_description);
     }
@@ -235,7 +312,7 @@ public class CenterFlags extends Timed implements HasScoreBroadcast {
         final JSONObject states = new JSONObject();
         cpFSMs.forEach((agentid, fsm) -> states.put(agentid, fsm.getCurrentState()));
         return super.getState()
-                .put("scores", new JSONObject(scores))
+                .put("scores", new JSONObject(scores.columnMap()))
                 .put("agent_states", states);
     }
 
